2001-03-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc pm3d/demo/Demo.gp src/axis.c src/axis.h
	src/color.c src/command.c src/graph3d.c src/plot3d.c src/pm3d.c
	src/pm3d.h src/save.c src/set.c src/show.c src/tables.c src/tables.h
	src/unset.c: colour box axis for pm3d.
	Removed command: set pm3d zrange.
	New commands: set/unset/show of cbrange, [m]cbtics, format cb,
	grid [m]cb, cblabel, cbdata, [no]cbdtics, [no]cbmtics.

2001-03-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: do not support pipes on Windows by default
	as it causes some problems (requires attached dos window - makes
	problems to pgnuplot or when started as gui-only).

2001-03-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/parse.c (xterms, aterms, bterms): Avoid storing pointers
 	into the dynamical array at->actions[]. They break if the action
 	table has to be reallocated. This caused a really strange endless
 	loop bug for a very complicated function using 8 nested levels of
 	conditional operators plus lots of function calls.

2001-03-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/win.trm src/win/wgnuplib.h src/win/wgraph.c: bugfix for windows
	terminal crash on NT if there were too many colour polygons.

2001-03-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* config/Makefile.am.in, demo/Makefile.am.in, tutorial/Makefile.am.in:
	$< is not portable. Use Makefile.am.in explicitly.

2001-03-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/titlepag.tex: autodetect pdf output - use package hyperref.

	* config/makefile.mgw: new targets: all, gnuplot.ps, gnuplot.tex.

	* config/makefile.mgw config/term.c: support for pipes under Windows.

2001-03-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot2d.c (get_data): Automatically revert to 'with points'
 	from candlesticks or financebars if input has only 1 or 2 columns.
  	Output a warning to the user about this. Fixed wording of the