@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: color.c,v 1.13 2001/03/19 14:52:23 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: color.c,v 1.14 2001/03/20 15:46:35 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - color.c */
@@ -638,8 +638,12 @@ draw_color_smooth_box()
 	setup_tics(COLOR_AXIS, 20);
 	CB_AXIS.autoscale = i;
 	term_apply_lp_properties(&border_lp); /* border linetype */
+	CB_AXIS.log = axis_array[FIRST_Z_AXIS].log; /* use log scaling from z-axis */
+	CB_AXIS.base = axis_array[FIRST_Z_AXIS].base;
+	CB_AXIS.log_base = axis_array[FIRST_Z_AXIS].log_base;
 	gen_tics( COLOR_AXIS, grid_selection & (GRID_CB | GRID_MCB),
 		  cbtick_callback );
+	CB_AXIS.log = FALSE; /* disable cb-axis log, if set by the above */
     }
 
     /* write the colour box label */
